# snek5000-cbox

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml  tests_slow.yml
doc/examples/: README.md  base_flow.restart  base_flow_side_simple.restart  run_RB_simple.py  run_linear_RB_simple.py  run_linear_side_simple.py  run_linear_simple.py  run_mixed_simple.py  run_side_short.py  run_side_simple.py  run_sim.py  run_simple.py  run_simple_RB.py  run_simple_mix.py  run_simple_side.py  run_simul.py  submit_simul.py
doc/examples/linear_from_base/: README.md  run_simul_linear.py  submit_multiple_lin_sim_sidewall.py
doc/examples/linear_from_base_flow/: run_simul_linear.py  submit_linear_sim.py
doc/examples/nonlinear_from_rest/: README.md  critical_Ra.py  critical_Ra_RB.py  critical_Ra_sidewall.py  plot_Rac_vs_aspect_ratio.py  run_simul.py  run_simul_check_from_python.py  submit_1simul_check.py  submit_multiple_check.py  submit_multiple_check_RB.py  submit_multiple_check_mixed.py  submit_multiple_check_sidewall.py  submit_multiple_sim_RB.py  submit_multiple_sim_mixed.py  submit_multiple_sim_sidewall.py  submit_simul.py  submit_simul_RB.py  submit_simul_mixed.py
doc/examples/nonlinear_restart/: README.md  run_restart.py  submit_restart.py
doc/scripts/: compute_amplitude_phase_maps.py
src/snek5000_cbox/: Snakefile  __init__.py  cbox.usr  cbox.usr.f  output.py  solver.py
tests/: conftest.py  test_init.py  test_linear.py  test_simul.py  test_slow.py  test_slow_RB.py  test_slow_SW.py  test_slow_sidewall.py
(+36 files in other folders)
