[metadata]
name = snek5000_cbox
version = 0.0.1
description = Snek5000 solver for the cbox (convective box) case
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE

[options]
package_dir=
    =src
packages=find:
install_requires =
    snek5000

[options.entry_points]
snek5000.solvers =
    cbox = snek5000_cbox.solver

[options.packages.find]
where=src

[options.package_data]
snek5000_cbox = templates/*.j2, toolbox/*, *.usr.f, Snakefile, etc/*.yml

